Finish libreta
